--- a/style.css
+++ b/style.css
@@ -444,8 +444,14 @@ code {
 	margin:14px 0 0;
 	padding:0 0 0 36px;
 	overflow:hidden;
-	background:url(images/bg-main.gif) repeat-y 701px 0;
+	position: relative;
 }
+
+#main.no-sidebarmain
+{
+  background:none;
+}
+
 #main:after{
 	content:'';
 	display:block;
@@ -462,6 +468,17 @@ code {
 	font-size:14px;
 	margin-left:45px;
 }
+
+#sidebar:after{
+	position: absolute;
+	top: 0;
+	left: 701px;
+	content: '';
+	width: 100%;
+	height: 95.8%;
+	border-left: 1px solid #d3d4d4;
+}
+
 #sidebar ul a{color:#343434;}
 #sidebar ul{padding:0 0 9px;}
 #sidebar li{
@@ -497,7 +514,10 @@ h3.decor-ttl img{
 #sidebar h3 i.icon-onshore{background-position:0 -27px;}
 #sidebar h3 i.icon-ropes{background-position:0 -54px;}
 #sidebar h3 i.icon-shallow{background-position:0 -81px;}
-#content{overflow:hidden;}
+#content{
+	overflow:hidden;
+}
+
 .posts{
 	width:100%;
 	padding:0 0 25px;
